--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon"
           href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport"
-          content="width=device-width, initial-scale=1" />
+          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <meta name="theme-color"
           content="#000000" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>代办理业务</title>
     <script>
         (function (doc) {
             var designWidth = 750;
@@ -34,6 +34,7 @@
             docEl.style.fontSize = rem + "px";
         }(document))
     </script>
+    <script src="//at.alicdn.com/t/font_1207927_ch5jnodqwoh.js"></script>
 </head>
 
 <body>
