--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,11 @@
             var designWidth = 750;
             var docEl = doc.documentElement
             var width = docEl.getBoundingClientRect().width;
-            var rem = width * 100 / designWidth; // 1rem = 100px  1px = 0.01rem 10 = 0.1rem 
+            var rem = width * 100 / designWidth; // 1rem = 100px  1px = 0.01rem 10px = 0.1rem 
             docEl.style.fontSize = rem + "px";
         }(document))
     </script>
-    <script src="//at.alicdn.com/t/font_1207927_5o4v8vhppes.js"></script>
+    <script src="//at.alicdn.com/t/font_1292529_nvxtbgreih8.js"></script>
 </head>
 
 <body>
@@ -50,6 +50,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="./vconsole.min.js"></script>
+    <script>
+        var vConsole = new VConsole();
+    </script> -->
 </body>
 
 </html>
