二级路由嵌套

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>代办理业务</title>
-    <script>
+    <!-- <script>
         (function (doc) {
             var designWidth = 750;
             var docEl = doc.documentElement
@@ -33,7 +33,7 @@
             var rem = width * 100 / designWidth; // 1rem = 100px  1px = 0.01rem 10 = 0.1rem 
             docEl.style.fontSize = rem + "px";
         }(document))
-    </script>
+    </script> -->
     <script src="//at.alicdn.com/t/font_1207927_5o4v8vhppes.js"></script>
 </head>
 
